# ai_plays_poke

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FOUNDATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.json  PROMPT.md  README.md  README_BASE.md  SKILL.md  TODO.md  capture.py  cron_runner.py  mypy.ini  opencode.jsonc  pyproject.toml  requirements-dev.txt  requirements.txt  test_vision_debug.py
.coding-hermes/: cron.sh  gameplay-architecture.md  tasks.md  usability-tests.md  version.yaml
.gitreins/: config.yaml  tasks.yaml
config/: cli-defaults.yaml  settings.yaml
data/: duration_profiles.json
docs/: architecture.html  architecture.md
guides/: pallet_town.md  pallet_town_bulbapedia.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
prompts/: PromptCatalog.md  index.txt
specs/: SPEC_INDEX.md  chronicle_ui_section_5_workbench.md  ptp_01x_api_integration.md  ptp_01x_chapter_01_perception_layer.md  ptp_01x_chapter_02_memory_layer.md  ptp_01x_chapter_03_cartography.md  ptp_01x_chapter_04_navigation_engine.md  ptp_01x_chapter_05_combat_system.md  ptp_01x_chapter_06_entity_management.md  ptp_01x_chapter_07_inventory_system.md  ptp_01x_chapter_08_dialogue_systems.md  ptp_01x_chapter_09_goap_planner.md  ptp_01x_chapter_10_failsafe_protocols.md  ptp_01x_cli_control_infrastructure.md  ptp_01x_database_schema_design.md  ptp_01x_edge_cases_recovery.md  ptp_01x_entity_summary.json  ptp_01x_executive_summary.md  ptp_01x_mode_duration_tracking.md  ptp_01x_system_prompts.md  technical_specifications.md  technical_specifications_v2.md  technical_specifications_v3.md  technical_specifications_v4_ultrathink.md  technical_specifications_v5_complete.md
src/: __init__.py  debug_screen.py  game_data.db  game_loop.py  generate_yellow_screenshots.py  main.py  memory_reader.py  simple_test.py  test_all_roms.py  test_pyboy.py
tests/: conftest.py  test_ai.py  test_ai_client.py  test_battle_analyzer.py  test_cartographer.py  test_combat.py  test_core_game_loop.py  test_dashboard.py  test_debug_screen.py  test_decision.py  test_demo_runner.py  test_demo_runner_mocked.py  test_diagnostic_scripts.py  test_dialogue.py  test_duckbrain_client.py  test_edge_cases.py  test_emulator.py  test_entity.py  test_exceptions.py  test_failsafe.py  test_game_database.py  test_game_loop.py  test_goap.py  (+44 more)
(+717 files in other folders)
